Fix card notes layout on narrow screen

--- a/include/blog.css
+++ b/include/blog.css
@@ -7,7 +7,15 @@ body {
 .card {
     background-color: white;
     padding: 24px;
-    margin-top: 10px;
+    margin-top: 16px;
+}
+
+.card.noted {
+    margin-top: 0;
+}
+
+.card-notes {
+    margin-top: 16px;
 }
 
 @media screen and (min-width: 768px) {
@@ -16,10 +24,6 @@ body {
         padding: 48px;
         width: 672px;
         box-shadow: 2px 1px 3px #cccccc;
-    }
-
-    .card.noted {
-        margin-top: 0;
     }
 
     .card-notes {
